hu7/procesamiento de mensaje de actualizacion de solicitud de prestamo desde SQS