@@ -6,10 +6,12 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 import software.amazon.awssdk.metrics.MetricCollection;
 import software.amazon.awssdk.metrics.MetricPublisher;
+
 import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
@@ -22,12 +24,12 @@ public class MicrometerMetricPublisher implements MetricPublisher {
         service.submit(() -> {
             List<Tag> tags = buildTags(metricCollection);
             metricCollection.stream()
-                    .filter(r -> r.value() instanceof Duration || r.value() instanceof Integer)
-                    .forEach(recordin -> {
-                        if (recordin.value() instanceof Duration) {
-                            registry.timer(recordin.metric().name(), tags).record((Duration) recordin.value());
-                        } else if (recordin.value() instanceof Integer) {
-                            registry.counter(recordin.metric().name(), tags).increment((Integer) recordin.value());
+                    .filter(record -> record.value() instanceof Duration || record.value() instanceof Integer)
+                    .forEach(record -> {
+                        if (record.value() instanceof Duration) {
+                            registry.timer(record.metric().name(), tags).record((Duration) record.value());
+                        } else if (record.value() instanceof Integer) {
+                            registry.counter(record.metric().name(), tags).increment((Integer) record.value());
                         }
                     });
         });
@@ -35,13 +37,13 @@ public class MicrometerMetricPublisher implements MetricPublisher {
 
     @Override
     public void close() {
-        /**/
+
     }
 
     private List<Tag> buildTags(MetricCollection metricCollection) {
         return metricCollection.stream()
-                .filter(r -> r.value() instanceof String || r.value() instanceof Boolean)
-                .map(recordin -> Tag.of(recordin.metric().name(), recordin.value().toString()))
-                .toList();
+                .filter(record -> record.value() instanceof String || record.value() instanceof Boolean)
+                .map(record -> Tag.of(record.metric().name(), record.value().toString()))
+                .collect(Collectors.toList());
     }
 }
